--- a/README.adoc
+++ b/README.adoc
@@ -4,6 +4,8 @@ Use Modbus with your Arduino.
 
 Using TCP or RS485 shields, like the MKR 485 Shield. This library depends on the ArduinoRS485 library.
 
+This library is based on https://github.com/stephane/libmodbus[libmodbus], modifications were made to the lower level RS485 and TCP layers to use Arduino Serial/RS485 and Client API's. Then an Arduino friendly API was added on top.
+
 For more information about this library please visit us at
 http://www.arduino.cc/en/Reference/ArduinoModbus
 
