--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 = Modbus Library for Arduino =
 
-Use Modbus with your Arduino. 
+Use http://www.modbus.org/[Modbus] with your Arduino. 
 
 Using TCP or RS485 shields, like the MKR 485 Shield. This library depends on the ArduinoRS485 library.
 
@@ -8,6 +8,11 @@ This library is based on https://github.com/stephane/libmodbus[libmodbus], modif
 
 For more information about this library please visit us at
 http://www.arduino.cc/en/Reference/ArduinoModbus
+
+== Useful resources ==
+
+* https://en.wikipedia.org/wiki/Modbus[Modbus - Wikipedia]
+* http://www.modbus.org/faq.php[Modbus FAQ]
 
 == License ==
 
