--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,10 @@
+// Define the repository information in these attributes
+:repository-owner: arduino-libraries
+:repository-name: ArduinoModbus
+
 = Modbus Library for Arduino =
+
+image:https://github.com/{repository-owner}/{repository-name}/workflows/Compile%20Examples/badge.svg["Compile Examples Status", link="https://github.com/{repository-owner}/{repository-name}/actions?workflow=Compile+Examples"]
 
 Use http://www.modbus.org/[Modbus] with your Arduino. 
 
