Add CI workflow to check for commonly misspelled words
In the event of a false positive, the problematic word should be added, in all lowercase, to
extras/codespell-ignore-words-list.txt, after which it will be ignored by the action.

--- a/README.adoc
+++ b/README.adoc
@@ -5,6 +5,7 @@
 = Modbus Library for Arduino =
 
 image:https://github.com/{repository-owner}/{repository-name}/workflows/Compile%20Examples/badge.svg["Compile Examples Status", link="https://github.com/{repository-owner}/{repository-name}/actions?workflow=Compile+Examples"]
+image:https://github.com/{repository-owner}/{repository-name}/workflows/Spell%20Check/badge.svg["Spell Check Status", link="https://github.com/{repository-owner}/{repository-name}/actions?workflow=Spell+Check"]
 
 Use http://www.modbus.org/[Modbus] with your Arduino. 
 
